--- a/src/components/Mapa/Mapa.css
+++ b/src/components/Mapa/Mapa.css
@@ -19,6 +19,7 @@ label {
   padding-left: 130px;
   margin-top: 50px;
 }
+
 .card {
   width: 450px;
   border: 1.5px solid rgb(87, 62, 62);
@@ -36,5 +37,10 @@ label {
   justify-content: center;
   align-items: center;
   margin-left: 0px;
-  margin-top: 40px;
+  margin-top: 25px;
+  border: 0ch;
+  width: 50px;
+  height: 30px;
+  border-radius: 5px;
+  color: white;
 }
