--- a/src/components/Mapa/Mapa.css
+++ b/src/components/Mapa/Mapa.css
@@ -1,46 +1,50 @@
 input {
-  margin-top: 10px;
+  margin-top: 10%;
 }
 .ingreso-texto {
-  margin-top: 10px;
+  margin-top: 2%;
 }
-.map-container-6 {
-  margin-bottom: 100px;
-}
+
 .form-control {
-  border: 2px solid rgb(87, 62, 62);
+  border: 1px solid rgb(87, 62, 62);
   width: 100%;
   height: 100%;
 }
-label {
-  width: 350px;
-}
+
 .contedor-contacto {
-  padding-left: 130px;
-  margin-top: 50px;
+  margin-top: 2%;
+  margin-left: 0%;
 }
 
 .card {
-  width: 450px;
+  width: 60% !important;
   border: 1.5px solid rgb(87, 62, 62);
-  height: 350px;
+  height: 100% !important;
 }
 .section-heading {
   margin-left: 10%;
 }
 .principal-container {
-  background-image: url("https://images.pexels.com/photos/269874/pexels-photo-269874.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260");
+  background-image: url("https://thumbs.dreamstime.com/b/mapa-de-la-ciudad-montevideo-uruguay-sudam%C3%A9rica-156935445.jpg");
 }
 .submit-button {
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-left: 0px;
-  margin-top: 25px;
-  border: 0ch;
-  width: 50px;
-  height: 30px;
+  margin-left: 1%;
+  margin-top: 10%;
+  border: none;
+  width: 24%;
+  height: 12%;
   border-radius: 5px;
   color: white;
+}
+#map-container-google-11 {
+  width: 90% !important;
+  height: 77% !important;
+  box-shadow: 15px 15px 15px #999;
+}
+.map-container-6 {
+  margin-bottom: 5%;
 }
