--- a/src/components/carrusel/Carrusel.css
+++ b/src/components/carrusel/Carrusel.css
@@ -1,6 +1,5 @@
 #carouselExampleControls {
-  width: 80%;
-  height: 500px;
+  width: 70%;
   overflow: hidden;
 }
 .container-carrusel {
@@ -11,18 +10,10 @@
   background-color: white;
   position: relative;
   width: 100%;
-  max-height: 100%;
-  padding: 25px;
+  padding: 2%;
 }
 .carousel-item {
   position: relative;
-}
-.carousel-item > img {
-  position: relative;
-  bottom: 100px;
-
-  height: auto;
-  width: auto;
-  max-height: 100vh;
-  max-width: 100vw;
+  align-items: center;
+height: 70vh;
 }
